<resources>
    <string name="app_name">Teste Sofie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Insira seu e-mail</string>
    <string name="hint_title">Informe um titulo</string>
    <string name="hint_description">Informe uma descrição</string>
    <string name="new_task">Nova Tarefa</string>
    <string name="detail_task">Detalhes Tarefa</string>
    <string name="save_task">Salvar</string>
    <string name="delete_task">Deletar</string>
</resources>