<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.DetalhesTarefaActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTarefaDetalhe"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:navigationIcon="@drawable/baseline_close_white_18dp"
        app:title="@string/detail_task"
        app:titleTextColor="@color/white">

    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/taskEmailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Email"
        android:gravity="center_horizontal"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/taskTituloEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Titulo"
        android:gravity="center_horizontal"
        android:hint="@string/hint_title"
        android:inputType="text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/taskDescricaoEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Descricao"
        android:gravity="center_horizontal"
        android:hint="@string/hint_description"
        android:inputType="text" />

    <Button
        android:id="@+id/saveTaskBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/save_task"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/deleteTaskBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:background="@color/danger"
        android:text="@string/delete_task"
        android:textColor="@color/white" />


</androidx.appcompat.widget.LinearLayoutCompat>